--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@ngrx/effects": "^10.1.2",
     "@ngrx/store": "^10.1.2",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
