--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run my-first-app:serve-ssr",
+    "serve:ssr": "node dist/my-first-app/server/main.js",
+    "build:ssr": "ng build --prod && ng run my-first-app:server:production",
+    "prerender": "ng run my-first-app:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +23,15 @@
     "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
+    "@angular/platform-server": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@ngrx/effects": "^10.1.2",
     "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
+    "@nguniversal/express-engine": "^11.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "bootstrap": "^3.4.1",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -33,6 +41,8 @@
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
     "@ngrx/store-devtools": "^10.1.2",
+    "@nguniversal/builders": "^11.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
