--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/platform-server": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@nestjs/ng-universal": "^4.2.0",
     "@ngrx/effects": "^10.1.2",
     "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
